--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
@@ -225,8 +225,9 @@ action:
             conditions:
               - condition: trigger #Hvis en bevegelsessensor blir utløst
                 id: bevegelse_utløst
-              - condition: trigger #Hvis områdets input_boolean blir slått på
-                id: område_boolean_aktivert
+              - condition: state #Hvis områdets input_boolean blir slått på
+                entity_id: !input input_booleans
+                state: "on"
         sequence:
           - choose: #Hvis input_boolean er av
               - conditions:
@@ -237,10 +238,6 @@ action:
                   - service: input_boolean.turn_on #Slå på område_boolean
                     target:
                       entity_id: !input input_booleans
-              - conditions:
-                  - condition: trigger #Hvis områdets input_boolean blir slått på
-                    id: område_boolean_aktivert
-                sequence: []
           - delay: !input countdown_time # La tiden gå!
           - repeat: # Loop som lar tiden gå til alle sensorer er 'off'.
               while:
