--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
@@ -178,7 +178,6 @@ action:
       input_scene_kveldstid_aktiv: !input scene_kveldstid_aktiv
       input_scene_kveldstid_passiv: !input scene_kveldstid_passiv
       input_scene_natt_aktiv: !input scene_natt_aktiv
-  - variables:
       sol_hoyde: "{{ state_attr('sun.sun', 'elevation') }}" #Finne nåværende høyde
       sol_grense: >-
         {% if states(input_grense_for_sol) | float != 0 %}
@@ -192,17 +191,17 @@ action:
           Debug: input_nattmodus_boolean is on
           {{ input_scene_natt_aktiv }}
         {% else %}
-          {% if is_state(input_input_booleans, 'on') and sol_hoyde > sol_grense %}
-            Debug: input_input_booleans is on and sol_hoyde > sol_grense
+          {% if is_state(states(input_input_booleans), 'on') and sol_hoyde > sol_grense %}
+            Debug: {{ states(input_input_booleans) }} is on and sol_hoyde > sol_grense
             {{ input_scene_dagtid_aktiv }}
-          {% elif is_state(input_input_booleans, 'off') and sol_hoyde > sol_grense %}
-            Debug: input_input_booleans is off and sol_hoyde > sol_grense
+          {% elif is_state(states(input_input_booleans), 'off') and sol_hoyde > sol_grense %}
+            Debug: {{ states(input_input_booleans) }} is off and sol_hoyde > sol_grense
             {{ input_scene_dagtid_passiv }}
-          {% elif is_state(input_input_booleans, 'on') and sol_hoyde <= sol_grense %}
-            Debug: input_input_booleans is on and sol_hoyde <= sol_grense
+          {% elif is_state(states(input_input_booleans), 'on') and sol_hoyde <= sol_grense %}
+            Debug: {{ states(input_input_booleans) }} is on and sol_hoyde <= sol_grense
             {{ input_scene_kveldstid_aktiv }}
-          {% elif is_state(input_input_booleans, 'off') and sol_hoyde <= sol_grense %}
-            Debug: input_input_booleans is off and sol_hoyde <= sol_grense
+          {% elif is_state(states(input_input_booleans), 'off') and sol_hoyde <= sol_grense %}
+            Debug: {{ states(input_input_booleans) }} is off and sol_hoyde <= sol_grense
             {{ input_scene_kveldstid_passiv }}
           {% else %}
             Debug: None of the conditions were met
