Prøve å gjøre nattlys ikke obligatorisk

--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
@@ -122,6 +122,7 @@ blueprint:
               filter:
               - domain:
                 - scene
+            default: null
 trigger:
   - platform: state #Bevegelsesensor Utløst
     entity_id: !input binary_sensors
