Minimumsversjon. Fjernet default

--- a/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
@@ -6,6 +6,8 @@ blueprint:
   domain: automation
   author: Karl Jørgen
   source_url: https://github.com/karlalskens/Home-Assistant-Lysstyring/blob/main/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_beta.yaml
+  homeassistant:
+    min_version: 2024.6
   input:
     omraade_section:
       name: Område
@@ -122,7 +124,6 @@ blueprint:
               filter:
               - domain:
                 - scene
-            default: null
 trigger:
   - platform: state #Bevegelsesensor Utløst
     entity_id: !input binary_sensors
